# stereo-vision

./: .gitignore  CMakeLists.txt  README.md
include/: cameraManager.hpp
include/camera/: calibration.hpp  camera.hpp  stereoCamera.hpp
include/disparity/: disparityEstimator.hpp
include/features/: descriptor.hpp  detector.hpp  featurePipeline.hpp  matcher.hpp
include/files/: fileManager.hpp  paths.hpp
include/geometry/: epipolarGeometry.hpp  rectification.hpp  triangulation.hpp
include/pipeline/: stereoReconstructionPipeline.hpp
include/pointcloud/: filters.hpp  pointCloud.hpp
include/provider/: calibration.hpp  camera.hpp  image.hpp  imageSource.hpp  stereoSystem.hpp
report/: content.md
src/: main.cpp
src/camera/: calibration.cpp  camera.cpp  stereoCamera.cpp
src/disparity/: disparityEstimator.cpp
src/features/: descriptor.cpp  detector.cpp  featurePipeline.cpp  matcher.cpp
src/files/: fileManager.cpp
src/geometry/: epipolarGeometry.cpp  rectification.cpp  triangulation.cpp
src/pipeline/: stereoReconstructionPipeline.cpp
src/pointcloud/: filters.cpp  pointCloud.cpp
src/provider/: calibration.cpp  camera.cpp  image.cpp  imageSource.cpp  stereoSystem.cpp
